Move radio buttons 1px to the left in case of image clipping issues

--- a/Survey/source/styles/_a-icon-multistate.scss
+++ b/Survey/source/styles/_a-icon-multistate.scss
@@ -13,6 +13,11 @@
     left: 0;
 }
 
+// specifically moves radio buttons 1px to the left to resolve image cropping on certain platforms
+.a-icon-multistate[data-icontype="single"] {
+    left: 1px;
+}
+
 /* Grid layout */
 .m-structure-cell .m-option-base .a-icon-multistate {
     position: relative;
